feat: Ajustar chips para evitar el desbordaiento
Se agregaron, quitaron o modificaron chips de las cards para evitar
que estas provoquen desbordamientos en ciertos tamaños de pantalla.

--- a/index.html
+++ b/index.html
@@ -333,7 +333,10 @@
                     Portafolio
                     <i class="material-icons right">more_vert</i>
                   </span>
-                  <p><span class="chip">Materialize</span></p>
+                  <p>
+                    <span class="chip">Materialize</span>
+                    <span class="chip">JS</span>
+                  </p>
                 </div>
                 <div class="card-action">
                   <a
@@ -379,7 +382,10 @@
                     WhatsApp UI
                     <i class="material-icons right">more_vert</i>
                   </span>
-                  <p><span class="chip">Materialize</span></p>
+                  <p>
+                    <span class="chip">Materialize</span>
+                    <span class="chip">CSS</span>
+                  </p>
                 </div>
                 <div class="card-action">
                   <a
@@ -425,6 +431,7 @@
                   <p>
                     <span class="chip">Sass</span>
                     <span class="chip">JS</span>
+                    <span class="chip">Animaciones</span>
                   </p>
                 </div>
                 <div class="card-action">
@@ -471,7 +478,11 @@
                     Club Astucia
                     <i class="material-icons right">more_vert</i>
                   </span>
-                  <p><span class="chip">Responsiv</span></p>
+                  <p>
+                    <span class="chip">Responsive</span>
+                    <span class="chip">Flexbox</span>
+                    <span class="chip">Grid</span>
+                  </p>
                 </div>
                 <div class="card-action">
                   <a
@@ -516,7 +527,7 @@
                   </span>
                   <p>
                     <span class="chip">Flexbox</span>
-                    <span class="chip">CSS Grid</span>
+                    <span class="chip">Grid</span>
                   </p>
                 </div>
                 <div class="card-action">
