--- a/index.html
+++ b/index.html
@@ -610,6 +610,67 @@
           </div>
         </section>
       </div>
+      <section class="section primary-js darken-3" id="contact">
+        <div class="container">
+          <div class="row">
+            <div class="col s12 l8">
+              <h2 class="white-text">Contactame</h2>
+            </div>
+            <div class="col s3 l1">
+              <a
+                href="mailto:sp4619168@gmail.com"
+                target="_blank"
+                class="contact__link"
+              >
+                <img
+                  src="images/social-logos/email.svg"
+                  alt="Icono de email"
+                  class="contact__logo"
+                />
+              </a>
+            </div>
+            <div class="col s3 l1">
+              <a
+                href="https://twitter.com/JSamuelAP"
+                target="_blank"
+                class="contact__link"
+              >
+                <img
+                  src="images/social-logos/twitter.svg"
+                  alt="Logo de Twitter"
+                  class="contact__logo"
+                />
+              </a>
+            </div>
+            <div class="col s3 l1">
+              <a
+                href="https://www.linkedin.com/in/jsamuelap/"
+                target="_blank"
+                class="contact__link"
+              >
+                <img
+                  src="images/social-logos/linkedin.svg"
+                  alt="Logo de LinkeIn"
+                  class="contact__logo"
+                />
+              </a>
+            </div>
+            <div class="col s3 l1">
+              <a
+                href="https://github.com/JSamuelAP"
+                target="_blank"
+                class="contact__link"
+              >
+                <img
+                  src="images/social-logos/github.svg"
+                  alt="Logo de GitHub"
+                  class="contact__logo"
+                />
+              </a>
+            </div>
+          </div>
+        </div>
+      </section>
     </main>
     <!-- Materialize -->
     <script src="js/bin/materialize.min.js"></script>
