feat: Crear footer con copyright

--- a/index.html
+++ b/index.html
@@ -610,6 +610,7 @@
           </div>
         </section>
       </div>
+      <!-- Contact -->
       <section class="section primary-js darken-3" id="contact">
         <div class="container">
           <div class="row">
@@ -672,6 +673,16 @@
         </div>
       </section>
     </main>
+    <!-- Footer -->
+    <footer class="page-footer">
+      <div class="container center-align">
+        <div class="section">
+          &copy;
+          <strong>JSamuel</strong>
+          2021
+        </div>
+      </div>
+    </footer>
     <!-- Materialize -->
     <script src="js/bin/materialize.min.js"></script>
     <script>
