feat: Animar elementos con scroll reveal
Se implemento la libreria ScrollReveal para animar partes del sitio
al hacer scroll.
Se creo un archivo index.js donde se movio el auto init de materialize
y las configuraciones de scroll reveal.
Se ajusto el delay de la animacion del hero para que se inicie
despues de la animacion del logo y encabezado del hero.

--- a/index.html
+++ b/index.html
@@ -91,6 +91,8 @@
     <link rel="stylesheet" href="css/materialize.min.css" />
     <!-- My styles -->
     <link rel="stylesheet" href="css/my-styles.min.css" />
+    <!-- ScrollReveal -->
+    <script src="js/scrollreveal.js"></script>
   </head>
   <body>
     <header class="header" id="header">
@@ -685,11 +687,6 @@
     </footer>
     <!-- Materialize -->
     <script src="js/bin/materialize.min.js"></script>
-    <script>
-      document.addEventListener("DOMContentLoaded", function () {
-        M.AutoInit();
-        document.querySelector("#header").classList.add("animate");
-      });
-    </script>
+    <script src="js/index.js"></script>
   </body>
 </html>
