--- a/index.html
+++ b/index.html
@@ -212,19 +212,11 @@
         <section class="section" id="skills">
           <h2 class="center-align">Tecnologías</h2>
           <p>
-            Actualmente sigo estudiando
-            <strong>JavaScript</strong>
-            , para después aprender
-            <strong>NodeJS</strong>
-            y
-            <strong>ReactJS</strong>
-            . En cuanto a CSS sé trabajar con
-            <strong>Flexbox</strong>
-            ,
-            <strong>CSS Grid</strong>
-            y utilizo la metodología
-            <strong>BEM</strong>
-            .
+            Actualmente sigo estudiando <strong>JavaScript</strong>, para
+            después aprender <strong>NodeJS</strong> y <strong>ReactJS</strong>.
+            En cuanto a CSS sé trabajar con <strong>Flexbox</strong>,
+            <strong>CSS Grid</strong> y utilizo la metodología
+            <strong>BEM</strong>.
           </p>
           <div class="row">
             <div class="col s12 m6 l3">
@@ -678,11 +670,7 @@
     <!-- Footer -->
     <footer class="page-footer">
       <div class="container center-align">
-        <div class="section">
-          &copy;
-          <strong>JSamuel</strong>
-          2021
-        </div>
+        <div class="section">&copy; <strong>JSamuel</strong> 2021</div>
       </div>
     </footer>
     <!-- Materialize -->
