feat: Cambiar el color del boton ver en vivo
El boton que lleva al proyecto mostrado en la card se cambio al
color secundario (violeta).

--- a/index.html
+++ b/index.html
@@ -336,7 +336,7 @@
                   <a
                     href="https://jsamuelap.github.io/"
                     target="_blank"
-                    class="waves-effect waves-light btn-small"
+                    class="waves-effect waves-light btn-small secondary-js"
                   >
                     <i class="material-icons left">search</i>
                     Vivo
@@ -385,7 +385,7 @@
                   <a
                     href="https://jsamuelap.github.io/WhatsApp-UI/"
                     target="_blank"
-                    class="waves-effect waves-light btn-small"
+                    class="waves-effect waves-light btn-small secondary-js"
                   >
                     <i class="material-icons left">search</i>
                     Vivo
@@ -432,7 +432,7 @@
                   <a
                     href="https://jsamuelap.github.io/goza-mexico/"
                     target="_blank"
-                    class="waves-effect waves-light btn-small"
+                    class="waves-effect waves-light btn-small secondary-js"
                   >
                     <i class="material-icons left">search</i>
                     Vivo
@@ -482,7 +482,7 @@
                   <a
                     href="https://jsamuelap.github.io/AstuciaWeb/"
                     target="_blank"
-                    class="waves-effect waves-light btn-small"
+                    class="waves-effect waves-light btn-small secondary-js"
                   >
                     <i class="material-icons left">search</i>
                     Vivo
@@ -528,7 +528,7 @@
                   <a
                     href="https://jsamuelap.github.io/ristorante-web/"
                     target="_blank"
-                    class="waves-effect waves-light btn-small"
+                    class="waves-effect waves-light btn-small secondary-js"
                   >
                     <i class="material-icons left">search</i>
                     Vivo
@@ -575,7 +575,7 @@
                   <a
                     href="https://jsamuelap.github.io/mi-primer-proyecto/"
                     target="_blank"
-                    class="waves-effect waves-light btn-small"
+                    class="waves-effect waves-light btn-small secondary-js"
                   >
                     <i class="material-icons left">search</i>
                     Vivo
