--- a/index.html
+++ b/index.html
@@ -197,10 +197,10 @@
               <picture>
                 <source
                   media="(max-width: 992px)"
-                  srcset="https://via.placeholder.com/150?text=JSamuel"
+                  srcset=""
                 />
                 <img
-                  src="https://via.placeholder.com/150x200?text=JSamuel"
+                  src=""
                   class="about__img"
                   alt="Fotografía mia"
                 />
