feat: Importar materialize css con npm
Se eliminaron las carpteas css, sass, js y fonts.

--- a/index.html
+++ b/index.html
@@ -82,17 +82,6 @@
     />
     <meta name="theme-color" content="#ffffff" />
     <title>JSamuel | Desarrollador Frontend</title>
-    <!-- Material icons -->
-    <link
-      href="https://fonts.googleapis.com/icon?family=Material+Icons"
-      rel="stylesheet"
-    />
-    <!-- Materialize -->
-    <link rel="stylesheet" href="css/materialize.min.css" />
-    <!-- My styles -->
-    <link rel="stylesheet" href="css/my-styles.min.css" />
-    <!-- ScrollReveal -->
-    <script src="js/scrollreveal.js"></script>
   </head>
   <body>
     <header class="header" id="header">
@@ -195,15 +184,8 @@
             </div>
             <div class="col s12 l3">
               <picture>
-                <source
-                  media="(max-width: 992px)"
-                  srcset=""
-                />
-                <img
-                  src=""
-                  class="about__img"
-                  alt="Fotografía mia"
-                />
+                <source media="(max-width: 992px)" srcset="" />
+                <img src="" class="about__img" alt="Fotografía mia" />
               </picture>
             </div>
           </div>
@@ -212,11 +194,19 @@
         <section class="section" id="skills">
           <h2 class="center-align">Tecnologías</h2>
           <p>
-            Actualmente sigo estudiando <strong>JavaScript</strong>, para
-            después aprender <strong>NodeJS</strong> y <strong>ReactJS</strong>.
-            En cuanto a CSS sé trabajar con <strong>Flexbox</strong>,
-            <strong>CSS Grid</strong> y utilizo la metodología
-            <strong>BEM</strong>.
+            Actualmente sigo estudiando
+            <strong>JavaScript</strong>
+            , para después aprender
+            <strong>NodeJS</strong>
+            y
+            <strong>ReactJS</strong>
+            . En cuanto a CSS sé trabajar con
+            <strong>Flexbox</strong>
+            ,
+            <strong>CSS Grid</strong>
+            y utilizo la metodología
+            <strong>BEM</strong>
+            .
           </p>
           <div class="row">
             <div class="col s12 m6 l3">
@@ -670,11 +660,12 @@
     <!-- Footer -->
     <footer class="page-footer">
       <div class="container center-align">
-        <div class="section">&copy; <strong>JSamuel</strong> 2021</div>
+        <div class="section">
+          &copy;
+          <strong>JSamuel</strong>
+          2021
+        </div>
       </div>
     </footer>
-    <!-- Materialize -->
-    <script src="js/bin/materialize.min.js"></script>
-    <script src="js/index.js"></script>
   </body>
 </html>
