--- a/index.html
+++ b/index.html
@@ -82,6 +82,8 @@
     />
     <meta name="theme-color" content="#ffffff" />
     <title>JSamuel | Desarrollador Frontend</title>
+    <!-- Styles -->
+    <link rel="stylesheet" href="css/custom.min.css" />
   </head>
   <body>
     <header class="header" id="header">
@@ -667,5 +669,7 @@
         </div>
       </div>
     </footer>
+    <!-- Materialize -->
+    <script src="js/materialize.min.js"></script>
   </body>
 </html>
