feat: Agregar los estilos personalizados
Se importaron los iconos de materialize.

--- a/index.html
+++ b/index.html
@@ -84,6 +84,11 @@
     <title>JSamuel | Desarrollador Frontend</title>
     <!-- Styles -->
     <link rel="stylesheet" href="css/custom.min.css" />
+    <!-- Materialize icons -->
+    <link
+      href="https://fonts.googleapis.com/icon?family=Material+Icons"
+      rel="stylesheet"
+    />
   </head>
   <body>
     <header class="header" id="header">
