feat: Cambiar el color de los enlaces del navbar
Se creo app.js para utilizar M.AutoInit() de materialize.

--- a/index.html
+++ b/index.html
@@ -676,5 +676,6 @@
     </footer>
     <!-- Materialize -->
     <script src="js/materialize.min.js"></script>
+    <script src="js/app.js"></script>
   </body>
 </html>
