feat: Implementar scrollreveal

--- a/index.html
+++ b/index.html
@@ -89,6 +89,8 @@
       href="https://fonts.googleapis.com/icon?family=Material+Icons"
       rel="stylesheet"
     />
+    <!-- Scrollreveal -->
+    <script src="js/scrollreveal.js"></script>
   </head>
   <body>
     <header class="header" id="header">
