feat: Actualizar el texto de la seccion Sobre mi

--- a/index.html
+++ b/index.html
@@ -181,14 +181,9 @@
               </p>
               <p>
                 Actualmente curso los primeros semestres de ingeniería en
-                sistemas computacionales 👨‍💻, pues además de la programación,
-                también me gustan las matemáticas 🧮, su complejidad de fascinan
-                y estoy seguro de que me ayudaran a crecer como profesional.
-              </p>
-              <p>
-                Todavía no cuento con experiencia profesional, pero me estoy
-                preparando para ello 💪, espero que muy pronto comience a
-                colaborar en proyectos reales con una pizca de código 👌.
+                sistemas computacionales 👨‍💻. Aún no cuento con experiancia
+                laboral, así que he incluido algunos proyectos que yo me he
+                propuesto durante el último año.
               </p>
             </div>
             <div class="col s12 l3">
