feat: Incluir Bootstrap en Tecnologias

--- a/index.html
+++ b/index.html
@@ -271,6 +271,17 @@
             <div class="col s12 m6 l3">
               <div class="card-panel center-align">
                 <img
+                  src="images/skills-logos/bootstrap.svg"
+                  class="skills__img"
+                  alt="Logo de Bootstrap"
+                  title="Framework de CSS"
+                />
+                <h5 class="truncate">Bootstrap 5</h5>
+              </div>
+            </div>
+            <div class="col s12 m6 l3">
+              <div class="card-panel center-align">
+                <img
                   src="images/skills-logos/materializecss.svg"
                   class="skills__img"
                   alt="Logo de Materialize CSS"
@@ -288,17 +299,6 @@
                   title="Preprocesador de CSS"
                 />
                 <h5 class="truncate">Sass</h5>
-              </div>
-            </div>
-            <div class="col s12 m6 l3">
-              <div class="card-panel center-align">
-                <img
-                  src="images/skills-logos/figma.svg"
-                  class="skills__img"
-                  alt="Logo de Figma"
-                  title="Software de diseño"
-                />
-                <h5 class="truncate">Figma</h5>
               </div>
             </div>
           </div>
