--- a/index.html
+++ b/index.html
@@ -361,6 +361,55 @@
                 <div class="card-image waves-effect waves-block waves-light">
                   <img
                     class="activator"
+                    src="images/miniatures/miniature-proyect-6.jpg"
+                    alt="Captura del proyecto"
+                  />
+                </div>
+                <div class="card-content">
+                  <span class="card-title activator grey-text text-darken-4">
+                    Fylo
+                    <i class="material-icons right">more_vert</i>
+                  </span>
+                  <p>
+                    <span class="chip">Bootstrap</span>
+                    <span class="chip">Sass</span>
+                  </p>
+                </div>
+                <div class="card-action">
+                  <a
+                    href="https://jsamuelap.github.io/mi-primer-proyecto/"
+                    target="_blank"
+                    class="waves-effect waves-light btn-small secondary-js"
+                  >
+                    <i class="material-icons left">search</i>
+                    Vivo
+                  </a>
+                  <a
+                    href="https://github.com/JSamuelAP/mi-primer-proyecto"
+                    target="_blank"
+                    class="waves-effect waves-light btn-small"
+                  >
+                    <i class="material-icons left">code</i>
+                    Código
+                  </a>
+                </div>
+                <div class="card-reveal">
+                  <span class="card-title grey-text text-darken-4">
+                    Fylo
+                    <i class="material-icons right">close</i>
+                  </span>
+                  <p>
+                    Landing Page, este proyecto es un reto 🎯 tomado de Frontend
+                    Mentor.
+                  </p>
+                </div>
+              </article>
+            </div>
+            <div class="col s12 m6 l4">
+              <article class="card sticky-action hoverable">
+                <div class="card-image waves-effect waves-block waves-light">
+                  <img
+                    class="activator"
                     src="images/miniatures/miniature-proyect-2.jpg"
                     alt="Captura del proyecto"
                   />
@@ -542,56 +591,6 @@
                     <i class="material-icons right">close</i>
                   </span>
                   <p>Página web sobre un restaurante 🍲.</p>
-                </div>
-              </article>
-            </div>
-            <div class="col s12 m6 l4">
-              <article class="card sticky-action hoverable">
-                <div class="card-image waves-effect waves-block waves-light">
-                  <img
-                    class="activator"
-                    src="images/miniatures/miniature-proyect-6.jpg"
-                    alt="Captura del proyecto"
-                  />
-                </div>
-                <div class="card-content">
-                  <span class="card-title activator grey-text text-darken-4">
-                    Mi primera página
-                    <i class="material-icons right">more_vert</i>
-                  </span>
-                  <p>
-                    <span class="chip">HTML</span>
-                    <span class="chip">CSS</span>
-                    <span class="chip">Git</span>
-                  </p>
-                </div>
-                <div class="card-action">
-                  <a
-                    href="https://jsamuelap.github.io/mi-primer-proyecto/"
-                    target="_blank"
-                    class="waves-effect waves-light btn-small secondary-js"
-                  >
-                    <i class="material-icons left">search</i>
-                    Vivo
-                  </a>
-                  <a
-                    href="https://github.com/JSamuelAP/mi-primer-proyecto"
-                    target="_blank"
-                    class="waves-effect waves-light btn-small"
-                  >
-                    <i class="material-icons left">code</i>
-                    Código
-                  </a>
-                </div>
-                <div class="card-reveal">
-                  <span class="card-title grey-text text-darken-4">
-                    Mi primera página
-                    <i class="material-icons right">close</i>
-                  </span>
-                  <p>
-                    Esta fue la primera págia con la que comencé todo 💚, trata
-                    sobre mí y mis gustos.
-                  </p>
                 </div>
               </article>
             </div>
