--- a/index.html
+++ b/index.html
@@ -377,7 +377,7 @@
                 </div>
                 <div class="card-action">
                   <a
-                    href="https://jsamuelap.github.io/mi-primer-proyecto/"
+                    href="https://jsamuelap.github.io/fylo-landing-page/"
                     target="_blank"
                     class="waves-effect waves-light btn-small secondary-js"
                   >
@@ -385,7 +385,7 @@
                     Vivo
                   </a>
                   <a
-                    href="https://github.com/JSamuelAP/mi-primer-proyecto"
+                    href="https://github.com/JSamuelAP/fylo-landing-page"
                     target="_blank"
                     class="waves-effect waves-light btn-small"
                   >
