feat: Incluir el nuevo proyecto del CRUD
Se actualizaron los nombres de las miniaturas.
Se borro la card de Ristorante.

--- a/index.html
+++ b/index.html
@@ -361,7 +361,53 @@
                 <div class="card-image waves-effect waves-block waves-light">
                   <img
                     class="activator"
-                    src="images/miniatures/miniature-proyect-6.jpg"
+                    src="images/miniatures/miniature-proyect-2.jpg"
+                    alt="Captura del proyecto"
+                  />
+                </div>
+                <div class="card-content">
+                  <span class="card-title activator grey-text text-darken-4">
+                    CRUD JS
+                    <i class="material-icons right">more_vert</i>
+                  </span>
+                  <p>
+                    <span class="chip">JS</span>
+                    <span class="chip">Bootstrap</span>
+                  </p>
+                </div>
+                <div class="card-action">
+                  <a
+                    href="https://jsamuelap.github.io/administrador-asignaturas/"
+                    target="_blank"
+                    class="waves-effect waves-light btn-small secondary-js"
+                  >
+                    <i class="material-icons left">search</i>
+                    Vivo
+                  </a>
+                  <a
+                    href="https://github.com/JSamuelAP/administrador-asignaturas"
+                    target="_blank"
+                    class="waves-effect waves-light btn-small"
+                  >
+                    <i class="material-icons left">code</i>
+                    Código
+                  </a>
+                </div>
+                <div class="card-reveal">
+                  <span class="card-title grey-text text-darken-4">
+                    CRUD JS
+                    <i class="material-icons right">close</i>
+                  </span>
+                  <p>Aplicación web para administrar materias escolares 📚.</p>
+                </div>
+              </article>
+            </div>
+            <div class="col s12 m6 l4">
+              <article class="card sticky-action hoverable">
+                <div class="card-image waves-effect waves-block waves-light">
+                  <img
+                    class="activator"
+                    src="images/miniatures/miniature-proyect-3.jpg"
                     alt="Captura del proyecto"
                   />
                 </div>
@@ -410,7 +456,7 @@
                 <div class="card-image waves-effect waves-block waves-light">
                   <img
                     class="activator"
-                    src="images/miniatures/miniature-proyect-2.jpg"
+                    src="images/miniatures/miniature-proyect-4.jpg"
                     alt="Captura del proyecto"
                   />
                 </div>
@@ -456,7 +502,7 @@
                 <div class="card-image waves-effect waves-block waves-light">
                   <img
                     class="activator"
-                    src="images/miniatures/miniature-proyect-3.jpg"
+                    src="images/miniatures/miniature-proyect-5.jpg"
                     alt="Captura del proyecto"
                   />
                 </div>
@@ -506,7 +552,7 @@
                 <div class="card-image waves-effect waves-block waves-light">
                   <img
                     class="activator"
-                    src="images/miniatures/miniature-proyect-4.jpg"
+                    src="images/miniatures/miniature-proyect-6.jpg"
                     alt="Captura del proyecto"
                   />
                 </div>
@@ -545,52 +591,6 @@
                     <i class="material-icons right">close</i>
                   </span>
                   <p>Página web sobre el club de fútbol ficticio Astucia ⚽.</p>
-                </div>
-              </article>
-            </div>
-            <div class="col s12 m6 l4">
-              <article class="card sticky-action hoverable">
-                <div class="card-image waves-effect waves-block waves-light">
-                  <img
-                    class="activator"
-                    src="images/miniatures/miniature-proyect-5.jpg"
-                    alt="Captura del proyecto"
-                  />
-                </div>
-                <div class="card-content">
-                  <span class="card-title activator grey-text text-darken-4">
-                    Ristorante
-                    <i class="material-icons right">more_vert</i>
-                  </span>
-                  <p>
-                    <span class="chip">Flexbox</span>
-                    <span class="chip">Grid</span>
-                  </p>
-                </div>
-                <div class="card-action">
-                  <a
-                    href="https://jsamuelap.github.io/ristorante-web/"
-                    target="_blank"
-                    class="waves-effect waves-light btn-small secondary-js"
-                  >
-                    <i class="material-icons left">search</i>
-                    Vivo
-                  </a>
-                  <a
-                    href="https://github.com/JSamuelAP/ristorante-web"
-                    target="_blank"
-                    class="waves-effect waves-light btn-small"
-                  >
-                    <i class="material-icons left">code</i>
-                    Código
-                  </a>
-                </div>
-                <div class="card-reveal">
-                  <span class="card-title grey-text text-darken-4">
-                    Ristorante
-                    <i class="material-icons right">close</i>
-                  </span>
-                  <p>Página web sobre un restaurante 🍲.</p>
                 </div>
               </article>
             </div>
