refactor: separar js en funciones
Se creo un archivo funciones.js para separar los procesos de la
aplicacion en funciones.

--- a/index.html
+++ b/index.html
@@ -672,6 +672,7 @@
     </footer>
     <!-- Materialize -->
     <script src="js/materialize.min.js"></script>
+    <script src="js/funciones.js"></script>
     <script src="js/app.js"></script>
   </body>
 </html>
