feat: Mostrar proyectos de forma dinamica
Se creo un arreglo de objectos, cada objeto contiene informacion
de los proyectos que se mostraran en la apliacion.
Se eliminaron los proyectos del HTML, en su lugar se creo un
template que servira como plantilla para crearlos e insertalos con
javascript.

--- a/index.html
+++ b/index.html
@@ -306,295 +306,7 @@
         <!-- Proyects -->
         <section class="section" id="proyects">
           <h2 class="center-align">Proyectos</h2>
-          <div class="row">
-            <div class="col s12 m6 l4">
-              <article class="card sticky-action hoverable">
-                <div class="card-image waves-effect waves-block waves-light">
-                  <img
-                    class="activator"
-                    src="images/miniatures/miniature-proyect-1.jpg"
-                    alt="Captura del proyecto"
-                  />
-                </div>
-                <div class="card-content">
-                  <span class="card-title activator grey-text text-darken-4">
-                    Portafolio
-                    <i class="material-icons right">more_vert</i>
-                  </span>
-                  <p>
-                    <span class="chip">Materialize</span>
-                    <span class="chip">JS</span>
-                  </p>
-                </div>
-                <div class="card-action">
-                  <a
-                    href="https://jsamuelap.github.io/"
-                    target="_blank"
-                    class="waves-effect waves-light btn-small secondary-js"
-                  >
-                    <i class="material-icons left">search</i>
-                    Vivo
-                  </a>
-                  <a
-                    href="https://github.com/JSamuelAP/JSamuelAP.github.io"
-                    target="_blank"
-                    class="waves-effect waves-light btn-small"
-                  >
-                    <i class="material-icons left">code</i>
-                    Código
-                  </a>
-                </div>
-                <div class="card-reveal">
-                  <span class="card-title grey-text text-darken-4">
-                    Portafolio
-                    <i class="material-icons right">close</i>
-                  </span>
-                  <p>
-                    Mi portafolio de desarrollador para mostrar mis habilidades
-                    📁.
-                  </p>
-                </div>
-              </article>
-            </div>
-            <div class="col s12 m6 l4">
-              <article class="card sticky-action hoverable">
-                <div class="card-image waves-effect waves-block waves-light">
-                  <img
-                    class="activator"
-                    src="images/miniatures/miniature-proyect-2.jpg"
-                    alt="Captura del proyecto"
-                  />
-                </div>
-                <div class="card-content">
-                  <span class="card-title activator grey-text text-darken-4">
-                    CRUD JS
-                    <i class="material-icons right">more_vert</i>
-                  </span>
-                  <p>
-                    <span class="chip">JS</span>
-                    <span class="chip">Bootstrap</span>
-                  </p>
-                </div>
-                <div class="card-action">
-                  <a
-                    href="https://jsamuelap.github.io/administrador-asignaturas/"
-                    target="_blank"
-                    class="waves-effect waves-light btn-small secondary-js"
-                  >
-                    <i class="material-icons left">search</i>
-                    Vivo
-                  </a>
-                  <a
-                    href="https://github.com/JSamuelAP/administrador-asignaturas"
-                    target="_blank"
-                    class="waves-effect waves-light btn-small"
-                  >
-                    <i class="material-icons left">code</i>
-                    Código
-                  </a>
-                </div>
-                <div class="card-reveal">
-                  <span class="card-title grey-text text-darken-4">
-                    CRUD JS
-                    <i class="material-icons right">close</i>
-                  </span>
-                  <p>Aplicación web para administrar materias escolares 📚.</p>
-                </div>
-              </article>
-            </div>
-            <div class="col s12 m6 l4">
-              <article class="card sticky-action hoverable">
-                <div class="card-image waves-effect waves-block waves-light">
-                  <img
-                    class="activator"
-                    src="images/miniatures/miniature-proyect-3.jpg"
-                    alt="Captura del proyecto"
-                  />
-                </div>
-                <div class="card-content">
-                  <span class="card-title activator grey-text text-darken-4">
-                    Fylo
-                    <i class="material-icons right">more_vert</i>
-                  </span>
-                  <p>
-                    <span class="chip">Bootstrap</span>
-                    <span class="chip">Sass</span>
-                  </p>
-                </div>
-                <div class="card-action">
-                  <a
-                    href="https://jsamuelap.github.io/fylo-landing-page/"
-                    target="_blank"
-                    class="waves-effect waves-light btn-small secondary-js"
-                  >
-                    <i class="material-icons left">search</i>
-                    Vivo
-                  </a>
-                  <a
-                    href="https://github.com/JSamuelAP/fylo-landing-page"
-                    target="_blank"
-                    class="waves-effect waves-light btn-small"
-                  >
-                    <i class="material-icons left">code</i>
-                    Código
-                  </a>
-                </div>
-                <div class="card-reveal">
-                  <span class="card-title grey-text text-darken-4">
-                    Fylo
-                    <i class="material-icons right">close</i>
-                  </span>
-                  <p>
-                    Landing Page, este proyecto es un reto 🎯 tomado de Frontend
-                    Mentor.
-                  </p>
-                </div>
-              </article>
-            </div>
-            <div class="col s12 m6 l4">
-              <article class="card sticky-action hoverable">
-                <div class="card-image waves-effect waves-block waves-light">
-                  <img
-                    class="activator"
-                    src="images/miniatures/miniature-proyect-4.jpg"
-                    alt="Captura del proyecto"
-                  />
-                </div>
-                <div class="card-content">
-                  <span class="card-title activator grey-text text-darken-4">
-                    WhatsApp UI
-                    <i class="material-icons right">more_vert</i>
-                  </span>
-                  <p>
-                    <span class="chip">Materialize</span>
-                    <span class="chip">CSS</span>
-                  </p>
-                </div>
-                <div class="card-action">
-                  <a
-                    href="https://jsamuelap.github.io/WhatsApp-UI/"
-                    target="_blank"
-                    class="waves-effect waves-light btn-small secondary-js"
-                  >
-                    <i class="material-icons left">search</i>
-                    Vivo
-                  </a>
-                  <a
-                    href="https://github.com/JSamuelAP/WhatsApp-UI"
-                    target="_blank"
-                    class="waves-effect waves-light btn-small"
-                  >
-                    <i class="material-icons left">code</i>
-                    Código
-                  </a>
-                </div>
-                <div class="card-reveal">
-                  <span class="card-title grey-text text-darken-4">
-                    WhatsApp UI
-                    <i class="material-icons right">close</i>
-                  </span>
-                  <p>Clon de la interfaz principal de WhatsApp Android 📱.</p>
-                </div>
-              </article>
-            </div>
-            <div class="col s12 m6 l4">
-              <article class="card sticky-action hoverable">
-                <div class="card-image waves-effect waves-block waves-light">
-                  <img
-                    class="activator"
-                    src="images/miniatures/miniature-proyect-5.jpg"
-                    alt="Captura del proyecto"
-                  />
-                </div>
-                <div class="card-content">
-                  <span class="card-title activator grey-text text-darken-4">
-                    Goza México
-                    <i class="material-icons right">more_vert</i>
-                  </span>
-                  <p>
-                    <span class="chip">Sass</span>
-                    <span class="chip">JS</span>
-                    <span class="chip">Animaciones</span>
-                  </p>
-                </div>
-                <div class="card-action">
-                  <a
-                    href="https://jsamuelap.github.io/goza-mexico/"
-                    target="_blank"
-                    class="waves-effect waves-light btn-small secondary-js"
-                  >
-                    <i class="material-icons left">search</i>
-                    Vivo
-                  </a>
-                  <a
-                    href="https://github.com/JSamuelAP/goza-mexico"
-                    target="_blank"
-                    class="waves-effect waves-light btn-small"
-                  >
-                    <i class="material-icons left">code</i>
-                    Código
-                  </a>
-                </div>
-                <div class="card-reveal">
-                  <span class="card-title grey-text text-darken-4">
-                    Goza México
-                    <i class="material-icons right">close</i>
-                  </span>
-                  <p>
-                    Sitio web de galerías de los lugares más impresionantes de
-                    México 🇲🇽.
-                  </p>
-                </div>
-              </article>
-            </div>
-            <div class="col s12 m6 l4">
-              <article class="card sticky-action hoverable">
-                <div class="card-image waves-effect waves-block waves-light">
-                  <img
-                    class="activator"
-                    src="images/miniatures/miniature-proyect-6.jpg"
-                    alt="Captura del proyecto"
-                  />
-                </div>
-                <div class="card-content">
-                  <span class="card-title activator grey-text text-darken-4">
-                    Club Astucia
-                    <i class="material-icons right">more_vert</i>
-                  </span>
-                  <p>
-                    <span class="chip">Responsive</span>
-                    <span class="chip">Flexbox</span>
-                    <span class="chip">Grid</span>
-                  </p>
-                </div>
-                <div class="card-action">
-                  <a
-                    href="https://jsamuelap.github.io/AstuciaWeb/"
-                    target="_blank"
-                    class="waves-effect waves-light btn-small secondary-js"
-                  >
-                    <i class="material-icons left">search</i>
-                    Vivo
-                  </a>
-                  <a
-                    href="https://github.com/JSamuelAP/AstuciaWeb"
-                    target="_blank"
-                    class="waves-effect waves-light btn-small"
-                  >
-                    <i class="material-icons left">code</i>
-                    Código
-                  </a>
-                </div>
-                <div class="card-reveal">
-                  <span class="card-title grey-text text-darken-4">
-                    Club Astucia
-                    <i class="material-icons right">close</i>
-                  </span>
-                  <p>Página web sobre el club de fútbol ficticio Astucia ⚽.</p>
-                </div>
-              </article>
-            </div>
-          </div>
+          <div class="row"></div>
         </section>
       </div>
       <!-- Contact -->
@@ -670,8 +382,46 @@
         </div>
       </div>
     </footer>
+    <!-- Plantillas -->
+    <template id="card">
+      <div class="col s12 m6 l4">
+        <article class="card sticky-action hoverable">
+          <div class="card-image waves-effect waves-block waves-light">
+            <img class="activator" src="" alt="Captura del proyecto" />
+          </div>
+          <div class="card-content">
+            <span class="card-title activator grey-text text-darken-4"></span>
+            <p class="card__chips">
+            </p>
+          </div>
+          <div class="card-action">
+            <a
+              href=""
+              target="_blank"
+              class="card__btn--live waves-effect waves-light btn-small secondary-js"
+            >
+              <i class="material-icons left">search</i>
+              Vivo
+            </a>
+            <a
+              href=""
+              target="_blank"
+              class="card__btn--code waves-effect waves-light btn-small"
+            >
+              <i class="material-icons left">code</i>
+              Código
+            </a>
+          </div>
+          <div class="card-reveal">
+            <span class="card-title grey-text text-darken-4"></span>
+            <p class="card-description"></p>
+          </div>
+        </article>
+      </div>
+    </template>
     <!-- Materialize -->
     <script src="js/materialize.min.js"></script>
+    <script src="js/proyectos.js"></script>
     <script src="js/funciones.js"></script>
     <script src="js/app.js"></script>
   </body>
