--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@
             .
           </p>
           <div class="row">
-            <div class="col s12 m6 l3">
+            <div class="col s6 l3">
               <div class="card-panel center-align">
                 <img
                   src="images/skills-logos/html-5.svg"
@@ -224,7 +224,7 @@
                 <h5 class="truncate">HTML 5</h5>
               </div>
             </div>
-            <div class="col s12 m6 l3">
+            <div class="col s6 l3">
               <div class="card-panel center-align">
                 <img
                   src="images/skills-logos/css-3.svg"
@@ -235,7 +235,7 @@
                 <h5 class="truncate">CSS 3</h5>
               </div>
             </div>
-            <div class="col s12 m6 l3">
+            <div class="col s6 l3">
               <div class="card-panel center-align">
                 <img
                   src="images/skills-logos/javascript.svg"
@@ -246,7 +246,7 @@
                 <h5 class="truncate">JavaScript</h5>
               </div>
             </div>
-            <div class="col s12 m6 l3">
+            <div class="col s6 l3">
               <div class="card-panel center-align">
                 <img
                   src="images/skills-logos/git-icon.svg"
@@ -257,7 +257,7 @@
                 <h5 class="truncate">Git</h5>
               </div>
             </div>
-            <div class="col s12 m6 l3">
+            <div class="col s6 l3">
               <div class="card-panel center-align">
                 <img
                   src="images/skills-logos/github-icon.svg"
@@ -268,7 +268,7 @@
                 <h5 class="truncate">GitHub</h5>
               </div>
             </div>
-            <div class="col s12 m6 l3">
+            <div class="col s6 l3">
               <div class="card-panel center-align">
                 <img
                   src="images/skills-logos/bootstrap.svg"
@@ -279,7 +279,7 @@
                 <h5 class="truncate">Bootstrap 5</h5>
               </div>
             </div>
-            <div class="col s12 m6 l3">
+            <div class="col s6 l3">
               <div class="card-panel center-align">
                 <img
                   src="images/skills-logos/materializecss.svg"
@@ -290,7 +290,7 @@
                 <h5 class="truncate">Materialize CSS</h5>
               </div>
             </div>
-            <div class="col s12 m6 l3">
+            <div class="col s6 l3">
               <div class="card-panel center-align">
                 <img
                   src="images/skills-logos/sass.svg"
@@ -391,8 +391,7 @@
           </div>
           <div class="card-content">
             <span class="card-title activator grey-text text-darken-4"></span>
-            <p class="card__chips">
-            </p>
+            <p class="card__chips"></p>
           </div>
           <div class="card-action">
             <a
