feat: Colocar mi logo en la seccion Sobre mi
Se agrego una fuente gruesa para las etiquetas strong

--- a/index.html
+++ b/index.html
@@ -174,22 +174,31 @@
           <div class="row">
             <div class="col s12 l9">
               <p>
-                Mi nombre es José Samuel Aldana Pérez, soy un joven mexicano 🇲🇽
-                apasionado por el mundo de la web, aún soy un novato, pero lo
-                disfruto porque estoy aprendiendo nuevas cosas que me permiten
-                crear lo que sea.
+                Mi nombre es
+                <strong>José Samuel Aldana Pérez</strong>
+                , soy un joven mexicano 🇲🇽 apasionado por el mundo de la web,
+                aún soy un novato, pero lo disfruto porque estoy aprendiendo
+                nuevas cosas que me permiten crear lo que sea.
               </p>
               <p>
-                Actualmente curso los primeros semestres de ingeniería en
-                sistemas computacionales 👨‍💻. Aún no cuento con experiancia
-                laboral, así que he incluido algunos proyectos que yo me he
-                propuesto durante el último año.
+                Actualmente curso la mitad de la carrera de ingeniería en
+                sistemas computacionales 👨‍💻. Por el momento no cuento con
+                experiancia laboral, así que he incluido algunos
+                <a href="#proyects" class="primary-js-text">proyectos</a>
+                que yo me he propuesto durante los últimos dos años.
               </p>
             </div>
             <div class="col s12 l3">
               <picture>
-                <source media="(max-width: 992px)" srcset="" />
-                <img src="" class="about__img" alt="Fotografía mia" />
+                <source
+                  media="(max-width: 992px)"
+                  srcset="images/brand-logos/logo-horizontal-black.svg"
+                />
+                <img
+                  src="images/brand-logos/logo-vertical-black.svg"
+                  class="about__img"
+                  alt="Mi logo"
+                />
               </picture>
             </div>
           </div>
