--- a/index.html
+++ b/index.html
@@ -319,7 +319,7 @@
         </section>
       </div>
       <!-- Contact -->
-      <section class="section primary-js darken-3" id="contact">
+      <section class="section primary-js" id="contact">
         <div class="container">
           <div class="row">
             <div class="col s12 l8">
