feat: Actualizar año del copyright
Se cambio el color de fondo y el orden del texto.

--- a/index.html
+++ b/index.html
@@ -382,12 +382,11 @@
       </section>
     </main>
     <!-- Footer -->
-    <footer class="page-footer">
+    <footer class="page-footer primary-js darken-2">
       <div class="container center-align">
         <div class="section">
-          &copy;
+          &copy; 2022
           <strong>JSamuel</strong>
-          2021
         </div>
       </div>
     </footer>
