feat: Utilizar CSS Grid en los proyectos

--- a/index.html
+++ b/index.html
@@ -315,7 +315,7 @@
         <!-- Proyects -->
         <section class="section" id="proyects">
           <h2 class="center-align">Proyectos</h2>
-          <div class="row"></div>
+          <div class="proyects__grid"></div>
         </section>
       </div>
       <!-- Contact -->
@@ -392,39 +392,39 @@
     </footer>
     <!-- Plantillas -->
     <template id="card">
-      <div class="col s12 m6 l4">
-        <article class="card sticky-action hoverable">
-          <div class="card-image waves-effect waves-block waves-light">
-            <img class="activator" src="" alt="Captura del proyecto" />
-          </div>
-          <div class="card-content">
-            <span class="card-title activator grey-text text-darken-4"></span>
-            <p class="card__chips"></p>
-          </div>
-          <div class="card-action">
-            <a
-              href=""
-              target="_blank"
-              class="card__btn--live waves-effect waves-light btn-small secondary-js"
-            >
-              <i class="material-icons left">search</i>
-              Vivo
-            </a>
-            <a
-              href=""
-              target="_blank"
-              class="card__btn--code waves-effect waves-light btn-small"
-            >
-              <i class="material-icons left">code</i>
-              Código
-            </a>
-          </div>
-          <div class="card-reveal">
-            <span class="card-title grey-text text-darken-4"></span>
-            <p class="card-description"></p>
-          </div>
-        </article>
-      </div>
+      <!-- <div class="col s12 m6 l4"> -->
+      <article class="card sticky-action hoverable">
+        <div class="card-image waves-effect waves-block waves-light">
+          <img class="activator" src="" alt="Captura del proyecto" />
+        </div>
+        <div class="card-content">
+          <span class="card-title activator grey-text text-darken-4"></span>
+          <p class="card__chips"></p>
+        </div>
+        <div class="card-action">
+          <a
+            href=""
+            target="_blank"
+            class="card__btn--live waves-effect waves-light btn-small secondary-js"
+          >
+            <i class="material-icons left">search</i>
+            Vivo
+          </a>
+          <a
+            href=""
+            target="_blank"
+            class="card__btn--code waves-effect waves-light btn-small"
+          >
+            <i class="material-icons left">code</i>
+            Código
+          </a>
+        </div>
+        <div class="card-reveal">
+          <span class="card-title grey-text text-darken-4"></span>
+          <p class="card-description"></p>
+        </div>
+      </article>
+      <!-- </div> -->
     </template>
     <!-- Materialize -->
     <script src="js/materialize.min.js"></script>
