fix: Aplicar hover a los botones de los proyectos
Se quito clase inecesaria que daba color al boton ver en vivo,
sobrescribia el color de fondo cuando se hace hover.

--- a/index.html
+++ b/index.html
@@ -405,7 +405,7 @@
           <a
             href=""
             target="_blank"
-            class="card__btn--live waves-effect waves-light btn-small secondary-js"
+            class="card__btn--live waves-effect waves-light btn-small"
           >
             <i class="material-icons left">search</i>
             Vivo
